Run ok with bigset. Todo: Add range query
